--- a/dailycracker-service/src/main/resources/application.properties
+++ b/dailycracker-service/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=dailycracker-service
+
+
+public class DailyCrackerServiceApplication {
+    public static void main(String[] args) {
+        SpringApplication.run(DailyTrackerServiceApplication.class, args);
+    }
+}
